# QuqiParser

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Ini.cpp  Ini.h  Ini.hpp  Json.cpp  Json.hpp  JsonParser.sln  main.cpp  readme.md
JsonParser/: Json.cpp  Json.h  JsonParser.cpp  JsonParser.vcxproj  JsonParser.vcxproj.filters  testdata.json
cmake/: quqiparser-config.cmake.in
include/QuqiParser/: Ini.h  Json.h
src/: Ini.cpp  Json.cpp
test/: test.cpp
